--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -2,4 +2,5 @@
     <string name="app_name">Freebees</string>
     <string name="action_settings">Settings</string>
     <string name="title_activity_event_detail">EventDetailActivity</string>
+    <string name="title_activity_event_creation">EventCreationActivity</string>
 </resources>
