--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -3,4 +3,5 @@
     <string name="action_settings">Settings</string>
     <string name="title_activity_event_detail">EventDetailActivity</string>
     <string name="title_activity_event_creation">EventCreationActivity</string>
+    <string name="google_maps_key">AIzaSyCOln6RtUt5N4pzBkpHYj3ReWwltenKZGk</string>
 </resources>
