--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -4,4 +4,7 @@
     <string name="title_activity_event_detail">EventDetailActivity</string>
     <string name="title_activity_event_creation">EventCreationActivity</string>
     <string name="google_maps_key">AIzaSyCOln6RtUt5N4pzBkpHYj3ReWwltenKZGk</string>
+
+    <!-- TODO: Remove or change this placeholder text -->
+    <string name="hello_blank_fragment">Hello blank fragment</string>
 </resources>
